fix: 画像のリンクの修正

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta property="og:type" content="article" />
     <meta property="og:description" content="PR TIMESで配信された株式会社NEKOのプレスリリース一覧です。株式会社NEKO｜土ム載6集タツシ関帯ち索上ッ嘘今シ題人じ技効ソア参界ヌ累利キタヌ権指端チエ袋最テ約索は抗火けびら消12憲略4比ご。情ぱご細渡決がび参多ぼあと日総浸げて独遠べにぶ抜判かたぼ歌護リび表館メケオ点科ゃみけへ基崩ほレの頼勉フナミチ整得しかゆぼ申山ヱラシツ傳麻ア番域ワソ済指歩ゃ。9曲訪46疑ごにべさ縫問変じほにょ庄報ユネマス宮商ぶ探始スキ割総鏡笑委歳逮ほぜド。来キヨニ圧喫ク戸難ねみゃ能二ア問立探ラ共野庫。" />
     <meta property="fb:app_id" content="1495958567142613" />
-    <meta property="og:image" content="./startup_ogp.jpg" />
+    <meta property="og:image" content="https://ibb.co/qNg6FQq" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Twitter用OGP画像テスト" />
-    <meta name="twitter:image" content="./startup_ogp.jpg" />
+    <meta name="twitter:image" content="https://ibb.co/qNg6FQq" />
     <meta name="twitter:description" content="Twitter用OGP画像テスト-Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
     <title>スタートアップページOGP画像テスト用</title>
 </head>
